2022-03-16  Nick Clifton  <nickc@redhat.com>

	* po/sr.po: Updated Serbian translation.

2022-02-09  Nick Clifton  <nickc@redhat.com>

	2.38 release.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* po/binutils.pot: Regenerate.

2022-01-27  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.

2022-01-24  Nick Clifton  <nickc@redhat.com>

	* po/bg.po: Updated Bulgarian translation.
	* po/fr.po: Updated French translation.
	* po/ro.po: Updated Romanian translation.
	* po/uk.po: Updated Ukranian translation.

2022-01-22  Martin Storsjö  <martin@martin.st>

	* dlltool.c (main): Allow inferring tmp_prefix from the dll name
	from a def file.

2022-01-22  Nick Clifton  <nickc@redhat.com>

	* configure: Regenerate.
	* po/binutils.pot: Regenerate.

2022-01-22  Nick Clifton  <nickc@redhat.com>

	* 2.38 release branch created.

2022-01-17  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: Regenerate.

2022-01-11  Fangrui Song  <maskray@google.com>

	PR binutils/28759
	* ar.c (long_options): Add --thin.
	(usage) Add --thin. Deprecate -T without diagnostics.
	* doc/binutils.texi: Add doc.
	* NEWS: Mention --thin.
	* binutils/testsuite/binutils-all/ar.exp: Add tests.

2022-01-11  Martin Storsjö  <martin@martin.st>

	* dlltool.c (main): If a prefix has not been provided, attempt to
	use a deterministic one based upon the dll name.

2022-01-07  Pavel Mayorov  <pmayorov@cloudlinux.com>

	PR 28718
	* dwarf.c: Revert previous delta.
	(debug_get_real_type): Reject indirect types that point to
	indirect types.
	(debug_get_type_name, debug_get_type_size, debug_write_type):
	Likewise.

2022-01-06  Nick Clifton  <nickc@redhat.com>

	* debug.c (debug_write_type): Allow for malicious recursion via
	indirect debug types.

2022-01-04  Nick Clifton  <nickc@redhat.com>

	PR 28716
	* dwarf.c (load_build_id_debug_file): Remove spurious printf.

2021-12-16  Nick Clifton  <nickc@redhat.com>

	PR 28697
	* dwarf.c (load_build_id_debug_file): New function.